# BLE_PORTBALE_DEVICE_NWS

./: sdkconfig
components/ble/: CMakeLists.txt  ble.c  ble.h
components/button/: CMakeLists.txt  gpio.c  gpio.h
components/flash/: CMakeLists.txt  flash.c  flash.h
components/rfid_module/: CMakeLists.txt  rfid_module.c  rfid_module.h
main/: CMakeLists.txt  main.c  main.h
